argocd-production/simple-service.yaml
# Service simple sin Istio para pruebas
apiVersion: v1
kind: Service
metadata:
  name: demo-microservice-simple
  namespace: default
  labels:
    app: demo-microservice-istio
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: demo-microservice-istio
